# cookiecutter-goyo

./: .gitignore  Pipfile  README.md  cookiecutter.json  devenv.nix  filter.py
hooks/: post_gen_project.py
{{cookiecutter.distro_name}}/: .coveragerc  .dockerignore  .env  .env-sample  .gitignore  .gitlab-ci.yml  .mypy.ini  .pydocstylerc  .pylintrc  Dockerfile  Justfile  Makefile  README.md  devenv.nix  pyproject.toml  setup.py  tach.toml
{{cookiecutter.distro_name}}/.github/workflows/: code-checking.yaml
{{cookiecutter.distro_name}}/docs/: CHANGELOG.md  CHANGELOG.rst  README.rst  api.rst  architecture.rst  conf.py  index.rst  project_structure.md  project_structure.rst
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/: sum.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/application/: exceptions.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/application/interfaces/: __init__.py  factory.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/application/interfaces/db/: __init__.py  todolistrepository.py  todorepository.py  uow.py  uowservice.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/domain/: __init__.py  todo.py  todolist.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/infrastructure/adapters/: config.py  logger.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/infrastructure/adapters/alchemy/: __init__.py  alchemytodolistrepository.py  alchemytodorepository.py  alchemyuow.py  alchemyuowservice.py  models.py  sqlitedatetimedecorator.py  todolistmapper.py  todomapper.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/infrastructure/adapters/factory/: __init__.py  localtest.py  simpleenvfactory.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/infrastructure/server/: be_server.py  exception_handlers.py  health_router.py  repoutils.py
{{cookiecutter.distro_name}}/src/{{cookiecutter.package_name}}/presentation/: be_server.sh
{{cookiecutter.distro_name}}/tests/integration/infrastructure/adapters/alchemy/: alchemymixin.py  test_alchemytodolistrepository.py  test_alchemytodorepository.py  test_alchemyuow.py  test_alchemyuowservice.py
{{cookiecutter.distro_name}}/tests/integration/infrastructure/adapters/factory/: test_simpleenvfactory.py
{{cookiecutter.distro_name}}/tests/unit/: test_sum.py
{{cookiecutter.distro_name}}/tests/unit/domain/: test_todo.py  test_todolist.py
{{cookiecutter.distro_name}}/tests/unit/infrastructure/: test_get_factory.py
{{cookiecutter.distro_name}}/tests/unit/infrastructure/server/: test_be_server.py
