[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
authors = [
  { name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}" },
]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = ["pydantic>=2.12.4"]

[project.scripts]
newtemplate = "newtemplate:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "green>=4.0.2",
    "pydocstyle>=6.3.0",
    "tach>=0.29.0",
    {%- if cookiecutter.use_devenv %}
    # these tools are installed by devenv, since their binaries installed with `pip` are dynamically linked
    # and nix requires statically linked ones.
    # "ruff>=0.14.5",
    # "ty>=0.0.1a26",
    {%- else %}
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
    {%- endif %}
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "D",
  "N",
  "S",
  "B",
  "ANN",
  "PL",
  "RUF",
  "COM",
  "C4",
  "DTZ",
  "EM",
  "RET",
  "SIM",
  "TCH",
  "ARG",
  "PTH",
  "ERA",
]
ignore = [
  "D100",
  "D104",
  "D203",
  "D213",
  "D407",
  "D413",
  "FA102",
  "EM101",
  "COM812",
  "S101",
  "RET504",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pydocstyle]
# From http://www.pydocstyle.org/en/stable/usage.html#in-file-configuration
#
# pydocstyle supports inline commenting to skip specific checks on specific functions
# or methods. The supported comments that can be added are:
#
#    "# noqa" skips all checks.
#    "# noqa: D102,D203" can be used to skip specific checks. Note that this is compatible
#             with skips from flake8, e.g. # noqa: D102,E501,D203.
#
# For example, this will skip the check for a period at the end of a function docstring:
#
#    def bad_function():  # noqa: D400
#        """Omit a period in the docstring as an exception"""
#        pass

ignore = [
  "D100",
  "D105",
  "D106",
  "D107",
  "D203",
  "D211",
  "D213",
  "D400",
  "D405",
  "D406",
  "D407",
  "D413",
]
match = "(?!test_)(?!__init__).*\\.py"
match-dir = "^(?!(tests|migrations)).*[pydocstyle]"
#inherit = false
